feat: add profile tabs for About and Ideas sections with updated styles

--- a/frontend/src/Styles/profile.css
+++ b/frontend/src/Styles/profile.css
@@ -19,7 +19,7 @@
 }
 
 .profile-section-inner .left-section .profile-image {
-    height: 200px;
+    height: 250px;
     /* border-radius: 50%; */
     margin-bottom: 20px;
 }
@@ -42,13 +42,13 @@
     font-size: 12px;
 }
 
-.profile-section-inner .left-section .header-horizontal-line {
+.header-horizontal-line {
     display: block;
     width: 100%;
     height: 1px;
-    background: black;
-    opacity: 0.3;
+    background: rgba(0, 0, 0, 0.3);
     margin-bottom: 3px;
+    position: relative;
 }
 
 .previous-works-list, .skills-list {
@@ -96,4 +96,37 @@
     font-size: 14px;
     font-weight: 500;
     opacity: 0.5;
+}
+
+.profile-tabs {
+    margin: 40px 0px;
+}
+
+.profile-tabs .tabs-header {
+    margin: 5px 0px;
+    width: fit-content;
+    display: flex;
+    align-items: center;
+    gap: 40px;
+}
+
+.profile-tabs .tabs-header .header-elements {
+    margin: 5px 0px;
+    width: fit-content;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    cursor: pointer;
+    font-size: 15px;
+    font-weight: 500;
+}
+
+.tab-indicator {
+    position: absolute;
+    display: block;
+    height: 3px;
+    border-radius: 50px;
+    bottom: -1.5px;
+    width: 70px;
+    background: var(--accent-color);
 }
