feat: add categories, colors, social media icons, and status constants for improved organization and functionality

--- a/frontend/src/Styles/profile.css
+++ b/frontend/src/Styles/profile.css
@@ -161,3 +161,13 @@
 .profile-tabs .about-tab .about-content .value {
     width: 50%;
 }
+
+.profile-tabs .about-tab .about-content .social-link-icon {
+    margin-right: 15px;
+    color: black;
+    transition: 0.2s;
+}
+
+.profile-tabs .about-tab .about-content .social-link-icon:hover {
+    color: var(--accent-color);
+}
