--- a/frontend/src/Styles/profile.css
+++ b/frontend/src/Styles/profile.css
@@ -42,6 +42,12 @@
     font-size: 12px;
 }
 
+.profile-section-inner .empty-message {
+    font-size: 13px;
+    color: var(--font-color);
+    opacity: 0.8;
+}
+
 .header-horizontal-line {
     display: block;
     width: 100%;
@@ -52,8 +58,16 @@
 }
 
 .previous-works-list, .skills-list {
-    min-height: 200px;
+    min-height: 100px;
     max-height: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.profile-section-inner .right-section {
+    position: relative;
+    width: 100%
 }
 
 .profile-section-inner .right-section .fullname {
@@ -98,6 +112,13 @@
     opacity: 0.5;
 }
 
+.profile-section-inner .right-section .send-message-button {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-top: 20px;
+}
+
 .profile-tabs {
     margin: 40px 0px;
 }
@@ -133,6 +154,7 @@
 
 .profile-tabs .tabs-body {
     margin: 30px 0px;
+    width: 100%;
 }
 
 .profile-tabs .about-tab .section-header {
@@ -141,7 +163,7 @@
 
 .profile-tabs .about-tab .about-content {
     display: flex;
-    align-items: center;
+    align-items: start;
     width: 100%;
     margin: 30px 10px;
     font-size: 14px;
@@ -152,6 +174,7 @@
 .profile-tabs .about-tab .about-content > * {
     display: block;
     text-align: left;
+    position: relative;
 }
 
 .profile-tabs .about-tab .about-content .field {
