--- a/frontend/src/Styles/profile.css
+++ b/frontend/src/Styles/profile.css
@@ -148,9 +148,12 @@
     text-align: left;
 }
 
+.profile-section-inner .right-section .profile-options .dropdown .report {
+    color: rgb(219, 6, 6);
+}
+
 .profile-section-inner .right-section .profile-options .dropdown .report:hover {
     background-color: #ECDFDE;
-    color: rgb(219, 6, 6);
 }
 
 .profile-section-inner .right-section .send-message-button {
@@ -208,7 +211,7 @@
 
 .profile-tabs .about-tab, .ideas-tab {
     transition: 0.2s;
-    /* position: absolute; */
+    position: absolute;
     min-height: 500px;
 }
 
