--- a/frontend/src/Styles/profile.css
+++ b/frontend/src/Styles/profile.css
@@ -260,7 +260,7 @@
 .popup-content {
     background-color: var(--background-color);
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
-    min-width: 40vw;
+    min-width: 35vw;
     max-height: 80vh;
     overflow-y: scroll;
     border-radius: 10px;
@@ -293,11 +293,17 @@
     position: sticky;
     bottom: 0px;
     background-color: var(--background-color);
-    padding: 20px 20px
+    padding: 20px 20px;
+    display: flex;
+    gap: 10px;
 }
 
 .edit-profile {
-    margin: 0px 30px
+    margin: 0px 35px
+}
+
+.popup-content::-webkit-scrollbar {
+    display: none;
 }
 
 .edit-profile p {
