--- a/frontend/src/Styles/profile.css
+++ b/frontend/src/Styles/profile.css
@@ -260,7 +260,7 @@
 .popup-content {
     background-color: var(--background-color);
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
-    min-width: 35vw;
+    min-width: 500px;
     max-height: 80vh;
     overflow-y: scroll;
     border-radius: 10px;
