feat: enhance profile works and skills display, add sticky add buttons, and improve scrollbar styles

--- a/frontend/src/Styles/main.css
+++ b/frontend/src/Styles/main.css
@@ -110,6 +110,27 @@ body {
   transition: opacity 500ms, transform 500ms;
 }
 
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+  padding: 10px 0px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--accent-color); 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  opacity: 0.8; 
+}
+
 
 /* .backward-enter {
   opacity: 0;
