--- a/frontend/src/Styles/profile.css
+++ b/frontend/src/Styles/profile.css
@@ -22,6 +22,7 @@
 
 .profile-section-inner .left-section .profile-image {
     height: 250px;
+    width: 250px;
     /* border-radius: 50%; */
     margin-bottom: 20px;
 }
