feat: integrate Cloudinary for image uploads and add signature generation endpoint

--- a/frontend/src/Styles/profile.css
+++ b/frontend/src/Styles/profile.css
@@ -23,7 +23,7 @@
 .profile-section-inner .left-section .profile-image {
     height: 250px;
     width: 250px;
-    /* border-radius: 50%; */
+    border-radius: 50%;
     margin-bottom: 20px;
 }
 
