feat: add new user model fields for liked, commented, and saved ideas; update UI components and styles

--- a/frontend/src/Styles/dropdown.css
+++ b/frontend/src/Styles/dropdown.css
@@ -35,11 +35,12 @@
     max-height: 250px;
     overflow-y: scroll;
     -ms-overflow-style: none;
-    scrollbar-width: none;
+    scrollbar-width: 3px;
   }
 
   .dropdown-list::-webkit-scrollbar {
-    display: none;
+    /* display: none; */
+    width: 3px;
   }
   
   .dropdown-item {
