--- a/frontend/src/Styles/profile.css
+++ b/frontend/src/Styles/profile.css
@@ -307,6 +307,7 @@
     margin-right: 15px;
     color: black;
     transition: 0.2s;
+    font-size: 22px;
 }
 
 .profile-tabs .about-tab .about-content .social-link-icon:hover {
