--- a/frontend/src/Styles/autocomplete.css
+++ b/frontend/src/Styles/autocomplete.css
@@ -36,11 +36,11 @@
     max-height: 250px;
     overflow-y: scroll;
     -ms-overflow-style: none;
-    scrollbar-width: none;
+    scrollbar-width: 3px;
   }
 
   .autocomplete-suggestion::-webkit-scrollbar {
-    display: none;
+    width: 3px;
   }
   
   .autocomplete-suggestion {
