--- a/frontend/src/Styles/ideapreview.css
+++ b/frontend/src/Styles/ideapreview.css
@@ -88,6 +88,34 @@
     100% {transform: scale(1)}
   }
 
+  .comments-section {
+    margin: 25px;
+    border: solid;
+  }
+
+  .input-comment {
+    width: 100%;
+    padding: 25px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .input-comment input {
+    width: 100%;
+    padding: 10px 20px;
+    border: 2px solid rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    font-size: 13px;
+    letter-spacing: 0.5px;
+    font-family: var(--accent-font);
+    font-weight: 500;
+  }
+
+  .input-comment input:focus {
+    outline: solid 3px var(--accent-color);
+  }
+
 /* .collaborate::after {
     content: "Collaborate with people";
 }
