feat: enhance comments functionality; include user profile image in comments and improve comment posting mechanism

--- a/frontend/src/Styles/ideapreview.css
+++ b/frontend/src/Styles/ideapreview.css
@@ -86,36 +86,69 @@
 @keyframes liked {
     50%  {transform: scale(1.5)}
     100% {transform: scale(1)}
-  }
+}
 
-  .comments-section {
+.comments-section {
     margin: 0px 25px;
-    border: solid;
+    overflow-y: scroll;
     min-height: 40vh;
-  }
+    padding: 10px 0px;
+}
 
-  .input-comment {
+.comment {
+    width:  100%;
+    display: flex;
+    align-items: start;
+    gap: 10px;
+    margin-bottom: 15px;
+}
+
+.comment .user-fullname {
+    margin: 0;
+    padding: 0;
+    margin-bottom: 3px;
+    text-align: left;
+    font-size: 13px;
+    font-family: var(--accent-font);
+    font-weight: 700;
+    cursor: pointer;
+    text-decoration: none;
+    color: var(--text-color);
+}
+
+.comment .user-fullname:hover {
+    text-decoration: underline;
+}
+
+.comment .comment-content {
+    margin: 0;
+    margin-bottom: 5px;
+    text-align: left;
+    font-size: 15px;
+}
+
+.input-comment {
     width: 100%;
     padding: 25px;
     display: flex;
     align-items: center;
     gap: 10px;
-  }
+}
 
-  .input-comment input {
+.input-comment input {
     width: 100%;
-    padding: 10px 20px;
+    padding: 10px;
     border: 2px solid rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     font-size: 13px;
     letter-spacing: 0.5px;
     font-family: var(--accent-font);
     font-weight: 500;
-  }
+}
 
-  .input-comment input:focus {
+.input-comment input:focus {
     outline: solid 3px var(--accent-color);
-  }
+}
 
 /* .collaborate::after {
     content: "Collaborate with people";
