--- a/frontend/src/Styles/ideapreview.css
+++ b/frontend/src/Styles/ideapreview.css
@@ -129,11 +129,9 @@
     text-decoration: underline;
 }
 
-.comment .comment-content {
-    margin: 0;
-    margin-bottom: 5px;
-    text-align: left;
-    font-size: 15px;
+.comment .comment-content-disabled {
+   padding: 0px;
+   border: none;
 }
 
 .input-comment {
@@ -175,7 +173,8 @@
 
 .comment-options .dropdown {
     right: 20%;
-    position: absolute;
+    top: 100%;
+    /* position: absolute; */
     background-color: var(--background-color);
     padding: 10px;
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
