--- a/frontend/src/Styles/ideapreview.css
+++ b/frontend/src/Styles/ideapreview.css
@@ -94,22 +94,26 @@
 }
 
 .comments-section {
-    margin: 0px 25px;
     overflow-y: scroll;
     min-height: 40vh;
-    padding: 10px 0px;
     align-items: center;
     justify-content: center;
     display: flex;
+    padding: 15px 0px;
 }
 
 .comment {
-    width:  100%;
     display: flex;
+    flex-direction: column;
     align-items: start;
     gap: 10px;
-    margin-bottom: 20px;
+    margin: 10px 20px;
+    margin-top: 0px;
     position: relative;
+    border-radius: 10px;
+    /* box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2); */
+    border: solid 2px rgba(0, 0, 0, 0.1);
+    padding: 15px;
 }
 
 .comment .user-fullname {
@@ -117,11 +121,20 @@
     padding: 0;
     margin-bottom: 3px;
     text-align: left;
-    font-size: 13px;
+    font-size: 15px;
     font-family: var(--accent-font);
     font-weight: 700;
     cursor: pointer;
     text-decoration: none;
+    color: var(--text-color);
+}
+
+.comment .comment-date-time {
+    margin: 0;
+    padding: 0;
+    text-align: left;
+    font-size: 13px;
+    font-family: var(--accent-font);
     color: var(--text-color);
 }
 
@@ -134,7 +147,7 @@
     line-height: 20px;
     font-family: var(--accent-font);
     font-weight: 500;
-    padding-right: 23px;
+    /* padding-right: 23px; */
 }
 
 .input-comment {
@@ -165,8 +178,8 @@
 
 .comment-options {
     position: absolute;
-    right: 0;
-    top: 0;
+    right: 15px;
+    top: 15px;
     cursor: pointer;
     width: fit-content;
     display: flex;
@@ -182,7 +195,6 @@
     padding: 10px;
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
-    z-index: 9999;
 }
 
 .comment-options .dropdown .dropdown-list {
