--- a/frontend/src/Styles/ideapreview.css
+++ b/frontend/src/Styles/ideapreview.css
@@ -101,6 +101,7 @@
     display: flex;
     flex-direction: column;
     padding-top: 15px;
+    max-height: 60vh;
 }
 
 .comment {
@@ -112,7 +113,7 @@
     margin-top: 0px;
     position: relative;
     border-radius: 10px;
-    width: 90%;
+    /* width: 90%; */
     border: solid 2px rgba(0, 0, 0, 0.1);
     padding: 15px;
 }
