feat: add save idea functionality and update user routes; refactor API calls in components

--- a/frontend/src/Styles/ideapreview.css
+++ b/frontend/src/Styles/ideapreview.css
@@ -84,11 +84,16 @@
 
 .idea-preview .extra-features .liked-button-animation {
     color: red;
-    animation: liked ease-out;
+    animation: pop ease-out;
     animation-duration: 0.2s;
 }
 
-@keyframes liked {
+.idea-preview .extra-features .save-button-animation {
+    animation: pop ease-out;
+    animation-duration: 0.2s;
+}
+
+@keyframes pop {
     50%  {transform: scale(1.5)}
     100% {transform: scale(1)}
 }
