--- a/frontend/src/Styles/profile.css
+++ b/frontend/src/Styles/profile.css
@@ -318,20 +318,33 @@
     height: 400px;
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    padding: 0px 10px;
 }
 
 .profile-tabs .ideas-tab .user-ideas-list .idea-card {
     text-align: left;
+    color: var(--text-color);
+    text-decoration: none;
+    padding:  15px;
+    border-radius: 5px;
+    transition: 0.2s;
     /* border: solid 1px; */
     /* padding: 10px; */
 }
 
+.profile-tabs .ideas-tab .user-ideas-list .idea-card:hover {
+    background-color: #E3F2FD;
+}
+
+.profile-tabs .ideas-tab .user-ideas-list .idea-card:hover .title {
+    color: var(--accent-color);
+}
+
 .profile-tabs .ideas-tab .user-ideas-list .idea-card .title {
-    margin: 5px 0px;
+    margin: 0;
+    margin-bottom: 5px;
     font-weight: 600;
     font-size: 14px;
+    transition: 0.2s;
 }
 
 .profile-tabs .ideas-tab .user-ideas-list .idea-card .description {
@@ -342,6 +355,7 @@
 .profile-tabs .ideas-tab .user-ideas-list .idea-card .posted-date {
     margin-top: 10px;
     font-size: 12px;
+    opacity: 0.8;
 }
 
 .popup-overlay {
