--- a/frontend/src/Styles/profile.css
+++ b/frontend/src/Styles/profile.css
@@ -335,6 +335,7 @@
     padding:  15px;
     border-radius: 5px;
     transition: 0.2s;
+    min-width: 100%;
     /* border: solid 1px; */
     /* padding: 10px; */
 }
