--- a/frontend/src/Styles/ideaeditor.css
+++ b/frontend/src/Styles/ideaeditor.css
@@ -145,17 +145,24 @@
 
 .idea-status-options {
     display: flex;
-    align-items: center;
+    align-items: stretch;
     justify-content: space-between;
-    gap: 20px;
+    gap: 10px;
     margin-bottom: 20px;
+    position: relative;
 }
 
 .idea-status-options .option {
     cursor: pointer;
-    border: solid 1px;
     flex: 1 1;
     text-align: center;
     padding: 10px;
+    color: var(--text-color);
+    border-radius: 10px;
+    min-height: 100%;
+    transition: 0.2s;
+}
+
+.idea-status-options .active {
     color: white;
 }
